# Maxine-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json  sonar-project.properties
.github/workflows/: build-release.yml  build.yml
src/: config.rs  main.rs
src/commands/: ask.rs  avatar.rs  cat.rs  dog.rs  eightball.rs  help.rs  mod.rs  prompt.rs  save.rs  setcolour.rs  time.rs  tldrify.rs  translate.rs  urban.rs
src/structs/: data.rs  handler.rs  mod.rs
src/util/: search.rs
