[package]
name = "maxine-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
lazy_static = "1.5.0"
rand = "0.9.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

serenity = "0.12"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
rig-core = "0.7.0"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
poise = "0.6.1"
regex = "1.11.1"
scraper = { version = "0.23.1", features = ["atomic"] }
tempfile = "3.10.1"
colors-transform = "0.2.11"
